# mdv

./: .gitignore  Cargo.toml  README.md  build.rs  test_data.json  test_data.toml  test_data.yaml
.github/workflows/: release.yml
assets/: icon.icns
benches/: cold_start.rs
docs/: benchmarks.md
docs/superpowers/plans/: 2026-05-09-mdv.md  2026-05-10-v0.2-performance.md
docs/superpowers/specs/: 2026-05-09-mdv-design.md  2026-05-10-gpui-port-design.md  2026-05-10-v0.2-performance-design.md  2026-05-16-diagrams-design.md
src/: app.rs  ast.rs  bench.rs  diagram.rs  highlight.rs  icon.rs  lib.rs  main.rs  md_highlight.rs  mindmap.rs  parser.rs  picker.rs  recent.rs  render.rs  search.rs  theme.rs  theme_import.rs  theme_load.rs  theme_watch.rs  tree.rs  virt.rs  watch.rs
tests/: ast_basic.rs  diagram_render.rs  hl_cache.rs  hot_reload_smoke.sh  parser_diagrams.rs  parser_snapshots.rs  search_basic.rs  virtual_scroll.rs
tests/fixtures/: basic.md  diagrams.md  gfm.md
tests/snapshots/: parser_snapshots__basic.snap  parser_snapshots__gfm.snap
