[package]
name = "mdv"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Lightweight beautiful markdown viewer"
license = "MIT"

[dependencies]
iced = { version = "0.13", features = ["tokio", "image", "advanced", "svg"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
notify = "7"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
open = "5"
arboard = "3"
dirs = "5"
dark-light = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tree-sitter = "0.24"
streaming-iterator = "0.1"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-json = "0.24"
tree-sitter-html = "0.23"
tree-sitter-md = "0.3"

[lib]
name = "mdv"
path = "src/lib.rs"

[[bin]]
name = "mdv"
path = "src/main.rs"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }

[package.metadata.packager]
product-name = "mdv"
identifier = "com.minchenlee.mdv"
description = "Lightweight beautiful markdown viewer"
authors = ["minchenlee"]
icons = ["assets/icon.icns", "assets/icon.ico", "assets/icon.png"]
category = "Utility"
homepage = "https://github.com/minchenlee/mdv"

[package.metadata.packager.macos]
minimum-system-version = "10.13"

[package.metadata.packager.nsis]
installer-mode = "currentUser"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
